made final changes to lecture5 lecture and hw

--- a/Fall_2022_Lectures/Lecture_5/HW5.ipynb
+++ b/Fall_2022_Lectures/Lecture_5/HW5.ipynb
@@ -283,6 +283,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0aee58c0",
+   "metadata": {},
+   "source": [
+    "c) If we make the rough approximation of $X$ as a Gaussian $N(\\mu, \\sigma^2)$, compute the interval centered at $\\mu$ in which we would expect $X$ to fall within 95% of the time. This is known as the 95%-confidence interval."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6e5c577a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your work or answer here\n",
+    "q_5c = ...\n",
+    "q_5c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d1171e5a",
    "metadata": {},
    "source": [
