--- a/Fall_2022_Lectures/Lecture_5/HW5_Answers.ipynb
+++ b/Fall_2022_Lectures/Lecture_5/HW5_Answers.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "8b702644",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "1daf13a2",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "60.0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "20b4ce18",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "10.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "e2c108ba",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
        "0.25"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "64d8edbe",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "0.5"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "ae9f1105",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "0.9375"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "3cf2bffb",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
        "1"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "1f74a651",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "0.8600000000000001"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "f77d0042",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "0.0006329957356076758"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "id": "3cd93f62",
    "metadata": {},
    "outputs": [
@@ -363,7 +363,7 @@
        "56.5"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "id": "3efab765",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
        "18.255136263528684"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,6 +411,40 @@
     "# SD(X) = sqrt(Var(X))\n",
     "q_5b = (8*0.5*0.5 + 25*4*0.5*0.5 + 100*6*0.5*0.5 + 625*0.5*0.5)**(1/2)\n",
     "q_5b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a68335cb",
+   "metadata": {},
+   "source": [
+    "c) If we make the rough approximation of $X$ as a Gaussian $N(\\mu, \\sigma^2)$, compute the interval centered at $\\mu$ in which we would expect $X$ to fall within 95% of of the time. This is known as the 95%-confidence interval."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e89dd5c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[19.979999999999997, 93.02000000000001]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your work or answer here\n",
+    "# A 95% confidence interval's bounds are 2 standard deviations above and below the mean.\n",
+    "# 2 * sigma = 2 * 18.26\n",
+    "# 95% CI = [56.5 - 2 * 18.26, ]\n",
+    "q_5c = [56.5 - 2 * 18.26, 56.5 + 2 * 18.26]\n",
+    "q_5c"
    ]
   },
   {
@@ -433,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "1bbba084",
    "metadata": {},
    "outputs": [
@@ -443,7 +477,7 @@
        "0.003605897556085832"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "id": "607deeaf",
    "metadata": {},
    "outputs": [
@@ -479,7 +513,7 @@
        "0.02250145247937658"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
