--- a/Fall_2022_Lectures/Lecture_5/Probability for Data Science Lecture.ipynb
+++ b/Fall_2022_Lectures/Lecture_5/Probability for Data Science Lecture.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "**Question:** Write out some permutations for Imm Thai example <br>\n",
     "\n",
-    "**Question:** use the formula or function provided above, calculate the permutation. What is n? What is k? <br>"
+    "**Question:** Use the formula or function provided above, calculate the permutation. What is n? What is k? <br>"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "id": "d9b662f4",
    "metadata": {},
    "source": [
-    "Answer: Order does not matter in this case because having person 1 and person 2 presenting is the same thing is having person 2 and person 1 presenting. What matters is who person 1 and person 2 are, not the order that they are chosen in."
+    "*Your answer here*"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n"
    ]
   },
   {
@@ -184,7 +184,7 @@
    "id": "54118237",
    "metadata": {},
    "source": [
-    "***Addition Rule***: If two events $A$ and $B$ are mutually exclusive, then the probability that either event will occur (the **union** of $A$ and $B$) is the sum of the probabilities that each individual event will occur, so $P(A \\cup B) = P(A) + P(B)$.\n",
+    "***Addition Rule***: If two events $A$ and $B$ are **mutually exclusive**, then the probability that either event will occur (the **union** of $A$ and $B$) is the sum of the probabilities that each individual event will occur, so $P(A \\cup B) = P(A) + P(B)$.\n",
     "\n",
     "**Exercise**: In the cell below, calculate the probability that either you draw a face card or a number card. \n",
     "\n",
@@ -201,7 +201,7 @@
    "source": [
     "prob_face_card = ...\n",
     "prob_number_card = ...\n",
-    "prob_face_or_number = prob_face_card + prob_number_card\n",
+    "prob_face_or_number = ...\n",
     "prob_face_or_number"
    ]
   },
@@ -401,7 +401,7 @@
    "id": "539744cf",
    "metadata": {},
    "source": [
-    "***Bayes' Rule***: Using $P(A \\cap B) = P(A | B) P(B)$ and $P(A \\cap B) = P(B | A) P(A)$, we can set both right hand sides equal to one another with $P(A | B) P(B) = P(B | A) P(A)$. Dividing both sides by $P(B)$, we get Bayes' Rule: $$P(A | B) = \\frac{P(B | A) P(A)}{P(B)}$$."
+    "***Bayes' Rule***: Using $P(A \\cap B) = P(A | B) P(B)$ and $P(A \\cap B) = P(B | A) P(A)$, we can set both right hand sides equal to one another with $P(A | B) P(B) = P(B | A) P(A)$. Dividing both sides by $P(B)$, we get Bayes' Rule: $$P(A | B) = \\frac{P(B | A) P(A)}{P(B)}$$ The right-hand side of the equation is also equal to $\\frac{P(B | A) P(A)}{P(B | A) P(A) + P(B | A^c) P(A^c)}$, where the denominator makes use of the Law of Total Probability. Essentially, we are finding all possible ways that B can occur given whether A occurs (or not), and then adding the probabilities."
    ]
   },
   {
@@ -409,7 +409,7 @@
    "id": "e16d7b6f",
    "metadata": {},
    "source": [
-    "Although we won't go in-depth into it now, Bayes' Rule is extremely useful for calculating conditional probabilities because sometimes $P(B|A)$ is much easier to calculate then $P(A|B)$."
+    "Bayes' Rule is extremely useful for calculating conditional probabilities because sometimes $P(B|A)$ is much easier to calculate then $P(A|B)$."
    ]
   },
   {
@@ -823,10 +823,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = 2  # how many good elements we want to choose\n",
-    "N = 52 # population size\n",
-    "G = 4  # number of good elements in population\n",
-    "n = 5  # simple random sample size\n",
+    "g = ...  # how many good elements we want to choose\n",
+    "N = ... # population size\n",
+    "G = ...  # number of good elements in population\n",
+    "n = ...  # simple random sample size\n",
     "stats.hypergeom.pmf(g, N, G, n)"
    ]
   },
@@ -850,6 +850,112 @@
     "G = ...  # number of good elements in population\n",
     "n = ...  # simple random sample size\n",
     "stats.hypergeom.pmf(g, N, G, n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37202bdc",
+   "metadata": {},
+   "source": [
+    "<a id='normal'></a>\n",
+    "# Normal Distribution\n",
+    "A **continuous** random variable follows the normal distribution if it has most values clustered around some mean $\\mu$ and tapers off symmetrically to the extremes. We indicate a normal random variable as $X \\sim \\mathcal{N}(\\mu, \\sigma^2)$ where $\\mu$ is the mean and $\\sigma^2$ is the variance. The area under a normal curve is always 1. \n",
+    "\n",
+    "The function has its peak at the mean, and its “spread” increases with the standard deviation. The normal distribution is useful for the Central Limit Theorem which will be covered in a later lecture. \n",
+    "\n",
+    "The standard normal distribution has a mean of 0, and standard deviation of 1. We can convert any normal distribution to the standard normal distribution by calculating the z scores.\n",
+    "\n",
+    "<img src='lecture_images/standard_normal.png' width=500px>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fcfe423",
+   "metadata": {},
+   "source": [
+    "One convenient characteristic of the normal distribution is the 68 - 95 - 99.7 rule.\n",
+    "<img src='lecture_images/68-95-997-rule.png' width=500px>  \n",
+    "Let's test out this rule on the standard normal distribution. \n",
+    "\n",
+    "`stats.norm(mu,sigma).cdf(x)` will give you the CDF of x where all x are follow a normal distribution with mean of $\\mu$ and standard deviation of $\\sigma$. Note that the function takes in the standard deviation $\\sigma$, not variance $\\sigma^2$. A CDF is the the probability that x is less than or equal to a value, or $P(X \\leq x)$ for any random variable $X$.\n",
+    "\n",
+    "What are the parameters for a standard normal distribution? Mean of 0 and standard deviation of 1.<br>\n",
+    "What does it mean when I type in `stats.norm(0,1).cdf(0)`? What should the answer be?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "521ff40e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guess what the below cell should return!\n",
+    "stats.norm(0,1).cdf(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8716ef81",
+   "metadata": {},
+   "source": [
+    "Now, let's test out the 68-95-99.7 rule:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "830512f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here\n",
+    "prob_one_sd_away = ...\n",
+    "prob_two_sd_away = ...\n",
+    "prob_three_sd_away = ...\n",
+    "\n",
+    "print(f\"Probability that X is one standard deviation away from the mean: {prob_one_sd_away}\")\n",
+    "print(f\"Probability that X is two standard deviations away from the mean: {prob_two_sd_away}\")\n",
+    "print(f\"Probability that X is three standard deviations away from the mean: {prob_three_sd_away}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a635281",
+   "metadata": {},
+   "source": [
+    "**Exercise:** Assume the class midterm average follows a normal distribution with mean of 65 and standard deviation of 10. What is the score range for the middle 95% scores?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29f21a69",
+   "metadata": {},
+   "source": [
+    "**Exercise:** James scored 85 points on the midterm. What percent of the class scored better than him? <br> How about if he scored 74 points?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a485d9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your work here\n",
+    "# part 1\n",
+    "percent_better1 = ...\n",
+    "\n",
+    "# part 2\n",
+    "percent_better2 = ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aaac95d",
+   "metadata": {},
+   "source": [
+    "That's it for this lecture! Today, we went over counting, probability, (mostly discrete) random variables, expectation and variance, and dipped our feet into continuous random variables in the form of the normal distribution! Now, you have an idea of how to deal with randomness with probability. We hope you had fun!"
    ]
   },
   {
