UPdated linear algebra section

--- a/Fall_2022_Lectures/Lecture_6/Lecture_6.ipynb
+++ b/Fall_2022_Lectures/Lecture_6/Lecture_6.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Lecture 6: Linear Algebra and Linear Regression\n",
     "\n",
-    "## 29 March \n",
+    "## 10/25/2022\n",
     "\n",
     "### Table of Contents\n",
     "* [Linear Algebra](#linear_algebra)  \n",
@@ -49,8 +49,8 @@
     "        * [When Can I Use A Linear Model?](#when_to_use)\n",
     "\n",
     "\n",
-    "### Hosted by and maintained by the [Student Association for Applied Statistics (SAAS)](https://susa.berkeley.edu).\n",
-    "Presented by Robert Lee, Wenhao Pan"
+    "### Hosted by and maintained by the [Student Association for Applied Statistics (SAAS)](https://saas.berkeley.edu/).\n",
+    "Presented by Sarang Deshpande, Wenhao Pan"
    ]
   },
   {
@@ -77,8 +77,29 @@
     "<a id='Example'></a>\n",
     "## Example\n",
     "<img src='https://www.scdn.co/i/_global/open-graph-default.png' width='500px' />\n",
-    "Spotify vectorizes their songs in order to find things that you might like. They can find the distance between some of your favorite songs and other songs by artists you haven't listened to before in order to help you discover new artists and songs.\n",
+    "Spotify vectorizes their songs in order to find things that you might like. They can find the distance between some of your favorite songs and other songs by artists you haven't listened to before in order to help you discover new artists and songs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='operation'></a>\n",
+    "## Matrices and Vectors\n",
     "\n",
+    "A matrix is a grid of numbers such as below. You can think of it as being represented by a 2-dimensional array.  \n",
+    "\n",
+    "$$\\mathbf{A} = \\begin{bmatrix} a_1 & a_2 & a_3 \\\\ a_4 & a_5 & a_6 \\\\ a_7 & a_8 & a_9 \\end{bmatrix}$$  \n",
+    "\n",
+    "A vector is a list of numbers such as below. You can think of it as being represented by a 1-dimensional array.\n",
+    "\n",
+    "$$\\mathbf{v} = \\begin{bmatrix} v_1 \\\\ v_2 \\\\ v_3 \\end{bmatrix}$$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='notation'></a>\n",
     "## Notation\n",
     "Common notation:\n",
@@ -98,7 +119,7 @@
     "* **Column** matrix: A matrix which consists of exactly $1$ column. If it has $m$ rows, it can be treated as a $m\\times 1$ vector. \n",
     "* **Row** matrix: A matrix which consists of exactly $1$ row. If it has $n$ columns, it can be treated as a $1\\times n$ vector. \n",
     "* **Determinant**: A scalar value that can be computed from the elements of a square matrix and encodes certain properties of the linear transformation described by the matrix.\n",
-    "* **Rank**: The maximal number of linearly independent columns of a matrix.\n"
+    "* **Rank**: The maximal number of linearly independent columns of a matrix."
    ]
   },
   {
@@ -127,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "cell_id": "00005-67ed3ef0-d833-4ee0-8ab7-84a2ccbc26d0",
     "deepnote_cell_type": "code",
@@ -144,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "cell_id": "00006-27f48f24-6208-46c7-8b62-37bad8a4e7a1",
     "deepnote_cell_type": "code",
@@ -169,6 +190,53 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_id": "00015-631db8c9-66ad-41fe-8516-3f4d26543641",
+    "deepnote_cell_type": "markdown",
+    "output_cleared": false
+   },
+   "source": [
+    "<a id='transpose'></a>\n",
+    "### Matrix Transpose\n",
+    "Transpose converts row vectors into column vectors, and vice versa. For example, for a $3 \\times 2$ matrix $\\mathbf{A}$ where $$ \\mathbf{A} = \\begin{bmatrix} 0 & 4\\\\ 7 & 0 \\\\ 3 & 1\\end{bmatrix}, \\mathbf{A}^T = \\begin{bmatrix} 0 & 7 & 3\\\\ 4 & 0 & 1\\end{bmatrix}$$ \n",
+    "\n",
+    "Note that $$(\\mathbf{A}^T)^T = \\mathbf{A}$$\n",
+    "\n",
+    "Lastly, let's try to find the transpose of a matrix "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "cell_id": "00016-a99e78db-0775-4f59-83d8-550ed95324f5",
+    "deepnote_cell_type": "code",
+    "execution_millis": 4,
+    "execution_start": 1603500465068,
+    "output_cleared": false,
+    "source_hash": "425fd80c"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-24,  20,  -5],\n",
+       "       [-18, -15,   4],\n",
+       "       [  5,  -4,   1]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Let's transpose that matrix!!! \n",
+    "A.transpose()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "cell_id": "00007-b550c957-fc26-46c2-9fc1-f6c4d72f5bd2",
     "deepnote_cell_type": "markdown",
     "output_cleared": false,
@@ -187,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "cell_id": "00008-c103ad58-ba3a-4db8-807f-dc76b189ae1b",
     "deepnote_cell_type": "code",
@@ -227,9 +295,6 @@
     "output_cleared": false
    },
    "source": [
-    "### Scalar Multiplication\n",
-    "\n",
-    "\n",
     "<a id='scalar_mul'></a>\n",
     "### Scalar Multiplication\n",
     "We can multiply a scalar (a.k.a. number) by a matrix by multiplying every entry of the matrix by the scalar. This is denoted $\\cdot$ between the scalar and the matrix. $$c \\cdot \\begin{bmatrix} a_1 & a_2\\\\ a_3 & a_4 \\end{bmatrix} = \\begin{bmatrix} c\\times a_1 & c\\times a_2\\\\ c\\times a_3 & c\\times a_4 \\end{bmatrix}$$\n",
@@ -239,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "cell_id": "00008-5c06acd5-1c9a-4ed0-af43-1e64fed3cfd6",
     "deepnote_cell_type": "code",
@@ -257,7 +322,7 @@
        "       [ -25,   20,    5]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,11 +339,9 @@
     "output_cleared": false
    },
    "source": [
-    "### Matrix Multiplication \n",
-    "\n",
     "<a id='matrix_mul'></a>\n",
     "### Matrix Multiplication\n",
-    "If $\\mathbf{A}$ is $m \\times p$ and $\\mathbf{B}$ is $p \\times n$, we can form $\\mathbf{C} = \\mathbf{A}\\mathbf{B}$, which has dimension $m \\times n$. For matrix multiplication to occur, the number of columns of $\\mathbf{A}$ has to equal the number of rows of $\\mathbf{B}$. A fact about matrix multiplication and transpose is that $(\\mathbf{A}\\mathbf{B})^T = \\mathbf{B}^T\\mathbf{A}^T$.$$\\begin{bmatrix} b_{11} & b_{12}\\\\ b_{21} & b_{22} \\\\ b_{31} & b_{32} \\end{bmatrix} = \\begin{bmatrix} \\mathbf{a_{1\\cdot}}\\cdot \\mathbf{b_{\\cdot1}} & \\mathbf{a_{1\\cdot}}\\cdot \\mathbf{b_{\\cdot2}}\\\\ \\mathbf{a_{2\\cdot}}\\cdot \\mathbf{b_{\\cdot1}} & \\mathbf{a_{2\\cdot}}\\cdot \\mathbf{b_{\\cdot2}} \\end{bmatrix}$$ where $\\mathbf{a_{i\\cdot}}$ is the $i$th row of matrix $\\mathbf{A}$ and $\\mathbf{b_{\\cdot j}}$ is the $j$th column of matrix $\\mathbf{B}.$\n",
+    "If $\\mathbf{A}$ is $m \\times p$ and $\\mathbf{B}$ is $p \\times n$, we can form $\\mathbf{C} = \\mathbf{A}\\mathbf{B}$, which has dimension $m \\times n$. For matrix multiplication to occur, the number of columns of $\\mathbf{A}$ has to equal the number of rows of $\\mathbf{B}$. A fact about matrix multiplication and transpose is that $(\\mathbf{A}\\mathbf{B})^T = \\mathbf{B}^T\\mathbf{A}^T$. $$\\begin{bmatrix} a_{11} & a_{12} & a_{13} \\\\ a_{21} & a_{22} & a_{23} \\end{bmatrix} \\begin{bmatrix} b_{11} & b_{12}\\\\ b_{21} & b_{22} \\\\ b_{31} & b_{32} \\end{bmatrix} = \\begin{bmatrix} \\mathbf{a_{1\\cdot}}\\cdot \\mathbf{b_{\\cdot1}} & \\mathbf{a_{1\\cdot}}\\cdot \\mathbf{b_{\\cdot2}}\\\\ \\mathbf{a_{2\\cdot}}\\cdot \\mathbf{b_{\\cdot1}} & \\mathbf{a_{2\\cdot}}\\cdot \\mathbf{b_{\\cdot2}} \\end{bmatrix}$$ where $\\mathbf{a_{i\\cdot}}$ is the $i$th row of matrix $\\mathbf{A}$ and $\\mathbf{b_{\\cdot j}}$ is the $j$th column of matrix $\\mathbf{B}.$\n",
     "\n",
     "For matrix multiplication, in general we don't have $\\mathbf{A}\\mathbf{B} = \\mathbf{B}\\mathbf{A}$.\n",
     "\n",
@@ -287,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "cell_id": "00010-7b40d11f-d9d9-4705-8120-44273db16639",
     "deepnote_cell_type": "code",
@@ -473,52 +536,171 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "cell_id": "00015-631db8c9-66ad-41fe-8516-3f4d26543641",
-    "deepnote_cell_type": "markdown",
-    "output_cleared": false
-   },
+   "metadata": {},
    "source": [
-    "### Matrix Transpose \n",
-    "\n",
-    "\n",
-    "<a id='transpose'></a>\n",
-    "### Transpose\n",
-    "Transpose converts row vectors into column vectors, and vice versa. For example, for a $3 \\times 2$ matrix $\\mathbf{A}$ where $$ \\mathbf{A} = \\begin{bmatrix} 0 & 4\\\\ 7 & 0 \\\\ 3 & 1\\end{bmatrix}, \\mathbf{A}^T = \\begin{bmatrix} 0 & 7 & 3\\\\ 4 & 0 & 1\\end{bmatrix}$$ \n",
-    "\n",
-    "Note that $$(\\mathbf{A}^T)^T = \\mathbf{A}$$\n",
-    "\n",
-    "Lastly, let's try to find the transpose of a matrix "
+    "<a id='regression'></a>\n",
+    "# Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suppose you are a data scientist in Amazon. One day, the manager of your team gave you the following dataset `mpg` collected by the company."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "cell_id": "00016-a99e78db-0775-4f59-83d8-550ed95324f5",
-    "deepnote_cell_type": "code",
-    "execution_millis": 4,
-    "execution_start": 1603500465068,
-    "output_cleared": false,
-    "source_hash": "425fd80c"
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horsepower</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>origin</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>chevrolet chevelle malibu</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>buick skylark 320</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plymouth satellite</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>amc rebel sst</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ford torino</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[-24,  20,  -5],\n",
-       "       [-18, -15,   4],\n",
-       "       [  5,  -4,   1]])"
+       "                            mpg  cylinders  displacement horsepower  weight  \\\n",
+       "name                                                                          \n",
+       "chevrolet chevelle malibu  18.0          8         307.0        130    3504   \n",
+       "buick skylark 320          15.0          8         350.0        165    3693   \n",
+       "plymouth satellite         18.0          8         318.0        150    3436   \n",
+       "amc rebel sst              16.0          8         304.0        150    3433   \n",
+       "ford torino                17.0          8         302.0        140    3449   \n",
+       "\n",
+       "                           acceleration  model_year  origin  \n",
+       "name                                                         \n",
+       "chevrolet chevelle malibu          12.0          70       1  \n",
+       "buick skylark 320                  11.5          70       1  \n",
+       "plymouth satellite                 11.0          70       1  \n",
+       "amc rebel sst                      12.0          70       1  \n",
+       "ford torino                        10.5          70       1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Let's transpose that matrix!!! \n",
-    "A.transpose()\n"
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import random\n",
+    "import pandas as pd\n",
+    "\n",
+    "mpg = pd.read_csv(\"./mpg.csv\", index_col=\"name\") # load mpg dataset\n",
+    "mpg.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It tells various attributes of different cars, including a car's make and model, miles per gallon, number of cylinders, weight, and more! Your manager want you to predict We're going to be trying to see which features affect a car's `mpg`, and our goal is to create a model that accurately predicts `mpg` given other attributes of the car. "
    ]
   },
   {
@@ -526,11 +708,11 @@
    "metadata": {
     "cell_id": "00017-dc70c50a-ac90-454b-bddc-dcb13a3b9255",
     "deepnote_cell_type": "markdown",
-    "output_cleared": false
+    "output_cleared": false,
+    "tags": []
    },
    "source": [
-    "<a id='regression'></a>\n",
-    "# Regression\n",
+    "**(CONTENT IN THIS CELL IS TEMPORARILY OBSOLETE)**\n",
     "\n",
     "<a id='intro'></a>\n",
     "## Introduction\n",
@@ -553,8 +735,13 @@
     "\n",
     "However, it is important to keep in mind what you are analyzing. Just because you can make a model describing the relationship between two variables, and even if you can use this model to predict the value of one variable based on the value of the other, it doesn't mean that one causes the other. You may have heard this before as the difference between **correlation** and **causation**. A classic example is the relationship between ice cream sales and murder rates. Turns out, when ice cream sales rise, so do murder rates. Does this mean ice cream *causes* people to commit murder? Or get murdered? Nope!\n",
     "\n",
-    "Today, we're going to learn how to make a **linear** model to describe the relationship between variables. A **nonlinear** model can be a decision tree and a neural network (with nonlinear activation function).\n",
-    "\n",
+    "Today, we're going to learn how to make a **linear** model to describe the relationship between variables. A **nonlinear** model can be a decision tree and a neural network (with nonlinear activation function)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='linear_regression'></a>\n",
     "## Linear Regression\n",
     "**Linear regression** is a method of making linear models. Linear model is one kind of model, in which the relationship between the explanatory variables and the response variable can be described by a linear function. For now, you can just think of a linear function as a straight line, which takes us to *simple linear regression*.\n",
@@ -566,7 +753,14 @@
     "\n",
     "$$y = \\theta_0 + \\theta_1x$$\n",
     "\n",
-    "Here, $y$ is the **response** or **dependent** variable we're trying to predict, and $x$ is an **explanatory** or **independent** variable used to predict $y$. For example, when you're trying to predict your friend's weight, $y$ would represent weight, while $x$ represents height. We are *assuming* that this is the *true* relationship between $x$ and $y$.\n",
+    "Here, $y$ is the **response** or **dependent** variable we're trying to predict, and $x$ is an **explanatory** or **independent** variable used to predict $y$. For example, when you're trying to predict your friend's weight, $y$ would represent weight, while $x$ represents height. We are *assuming* that this is the *true* relationship between $x$ and $y$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(CONTENT IN THIS CELL IS TEMPORARILY OBSOLETE)**\n",
     "\n",
     "Using known $x$'s, we want to accurately predict $y$ using the right $\\hat{\\theta}_0$ and $\\hat{\\theta}_1$. Note that here we're putting a hat on the $\\theta$'s: this is because the data sample $y_i$ we have will not be perfect (with error terms). Here, the data points we have will have some unobserved deviations from the model function above, and we model this deviation using $\\epsilon_i$ which is called *error term*. Hence, the data points we have follow\n",
     "\n",
@@ -574,8 +768,13 @@
     "\n",
     "Conventionally, we treat $x_i$'s as constants since we can observe their exact/true values. Meanwhile, we treat $\\epsilon_i$'s as random variables since we do not know their exact/true values.\n",
     "\n",
-    "\\*\\* I know that seeing $\\theta$'s everywhere can be quiet scary. It is helpful to keep in mind that these variables are constants (Why?) and can be replaced with any other variable in the alphabet that makes you comfortable, such as a and b.\n",
-    "\n",
+    "\\*\\* I know that seeing $\\theta$'s everywhere can be quiet scary. It is helpful to keep in mind that these variables are constants (Why?) and can be replaced with any other variable in the alphabet that makes you comfortable, such as a and b."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Question b1:** Are following models linear models?\n",
     "1. $y_i = \\theta_0 + \\theta_1x_i + \\theta_2x_i^2$\n",
     "2. $y_i = \\theta_0 + \\theta_1^2x_i$\n",
