--- a/Fall_2022_Lectures/Lecture_6/Lecture6-HW-Answers.ipynb
+++ b/Fall_2022_Lectures/Lecture_6/Lecture6-HW-Answers.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ffd641b0",
    "metadata": {},
    "source": [
     "# HW -- Lecture 6: Linear Algebra and Linear Regression\n",
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73c7f27a",
    "metadata": {},
    "source": [
     "## Linear Algebra"
@@ -20,8 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b15b5510",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c27d330a",
    "metadata": {},
    "source": [
     "**Exercise 1:** Create four different 4X1 vectors v1, v2, v3, and v4. "
@@ -38,8 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a6a0196b",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +46,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "028f1cd7",
    "metadata": {},
    "source": [
     "**Exercise 2:** Create a 4X4 matrix called A using the vectors created in the previous exercise."
@@ -59,8 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c4b0f67e",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +74,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d301719f",
    "metadata": {},
    "source": [
     "**Exercise 3:** Find the specific transpose of the matrix A created above."
@@ -89,8 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d761ab2e",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +101,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb9553fb",
    "metadata": {},
    "source": [
     "**Exercise 4:** Add matrix A to the transpose of the matrix B below."
@@ -118,8 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6b828947",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +130,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9029af2",
    "metadata": {},
    "source": [
     "**Exercise 5:** What is the dimensions of a 4X2 matrix times a 2X7 matrix?"
@@ -149,8 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7dbae618",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +146,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2443b2f4",
    "metadata": {},
    "source": [
     "**Exercise 6:** Are the rows of the matrices below linearly independent or dependent?"
@@ -167,8 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c329d9c1",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +163,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bcf6804",
    "metadata": {},
    "source": [
     "**Exercise 7:** Is the matrix C above invertible or not? Provide an explanation using the idea of linear independence or dependence.\n",
@@ -188,17 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "77fb4d4b",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "-5.921189464667507e-15"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,11 +192,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c532a4db",
    "metadata": {},
    "source": [
     "Since the matrix C is linearly dependent, therefore one of the rows is a linear combination of the other rows, so the determinant of the matrix will be 0 resulting in the matrix being noninvertible"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 8:** Find the inverse of matrix D."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-6.   3.6  1.4]\n",
+      " [ 5.  -3.  -1. ]\n",
+      " [-1.   0.8  0.2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "D = np.array([[1, 2, 3],\n",
+    "             [0, 1, 5],\n",
+    "             [5, 6, 0]])\n",
+    "\n",
+    "print(np.linalg.inv(D))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -232,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
