Fixed lecture_6.ipynb and created lecture_6_complete.ipynb that fills all the code in lecture_6.ipynb

--- a/Fall_2022_Lectures/Lecture_6/Lecture_6.ipynb
+++ b/Fall_2022_Lectures/Lecture_6/Lecture_6.ipynb
@@ -1118,7 +1118,7 @@
     "x = np.linspace(5,25,100)\n",
     "y_1 = a_1 + b_1 * x\n",
     "plt.scatter(x=acceleration, y=mpg)\n",
-    "plt.plot(x_1, y_1, color='red', label='first line')\n",
+    "plt.plot(x, y_1, color='red', label='first line')\n",
     "plt.xlabel('acceleration')\n",
     "plt.ylabel('mpg')\n",
     "plt.legend()\n",
@@ -1142,8 +1142,8 @@
     "b_2 = ...\n",
     "y_2 = a_2 + b_2 * x\n",
     "plt.scatter(x=acceleration, y=mpg)\n",
-    "plt.plot(x_1, y_1, color='red', label='first line')\n",
-    "plt.plot(x_2, y_2, color='purple', label='second line')\n",
+    "plt.plot(x, y_1, color='red', label='first line')\n",
+    "plt.plot(x, y_2, color='purple', label='second line')\n",
     "plt.xlabel('acceleration')\n",
     "plt.ylabel('mpg')\n",
     "plt.legend()\n",
@@ -1163,6 +1163,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mpg_pred_1 = ... # predicted mpg using line 1 on acceleration\n",
+    "mpg_pred_2 = ... # predicted mpg using line 2 on acceleration\n",
+    "\n",
     "average_loss_line_1 = ...\n",
     "average_loss_line_2 = ...\n",
     "\n",
@@ -1207,6 +1210,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x_bar = ...\n",
+    "y_bar = ...\n",
+    "\n",
+    "b_hat_num = ... # numerator of b_hat\n",
+    "b_hat_den = ... # denominator of b_hat\n",
+    "\n",
     "b_hat = ...\n",
     "a_hat = ...\n",
     "y_hat = a_hat + b_hat * x\n",
@@ -1219,6 +1228,7 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
+    "mpg_pred_best = ... # predicted mpg using the best line on acceleration\n",
     "average_loss_best_line = ...\n",
     "\n",
     "print(\"average loss of line 1\", average_loss_line_1)\n",
@@ -1709,8 +1719,8 @@
    ],
    "source": [
     "plt.scatter(acceleration, mpg)\n",
-    "y_constant_reg = ...\n",
-    "plt.scatter(acceleration, y_constant_reg, label = 'constant regression')\n",
+    "mpg_pred_constant_reg  = ...\n",
+    "plt.scatter(acceleration, mpg_pred_constant_reg , label = 'constant regression')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
